--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="pt-BR">
 <head>
-	<title> INVIGAR </title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-	<title>Título da Página</title>
+	<title>Invigar</title>
 	<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,900&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
 	<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -13,7 +12,7 @@
 	<style type="text/css">
 	
 		.limitador {
-			max-width: 1600px;
+			max-width: 1500px;
 			margin: 0px auto;
 		}
 		.cookie {
@@ -207,9 +206,8 @@
 </head>
 <body>
 <div class="div1 limitador">
-	<h1> Dark Background is <br/> a <span class="cookie"> <i> Smart </i> </span> Idea </h1>
-	<p class="sub1"> Sed tincidunt sapien eu diam rutrum tristique. Praesent ac justo ac lectus  
-	commodo ullamcorper. Sed facilisis eget elit nec cursus </p>
+	<h1> Pedro de Sá Mantega <br/> é o <span class="cookie"> <i> Invigar </i> </span> do TikTok </h1>
+	<p class="sub1"> <b> Esse gato é ator, fascinado por répteis, sobretudo, pelas <i> Agalychnis callidryas </i>, joga League Of Legends e ama a cor verde. Eu dedico essa página a ele. </b> </p>
 	<p class="botao"> <a class="bordabotao" href="https://www.instagram.com/invigar_/" target="_blank" > GO </a> </p>
 
 </div>
@@ -218,17 +216,17 @@
 	<div class="row">
 	<div class="col-sm-6 coluna">
 	<div class="texto">
-	<p class="aboutus"> ABOUT US </p>
+	<p class="aboutus"> ABOUT HIM </p>
 	
-	<h3> We are modern & special for <span class="marketing cookie"> <i> marketing </i> </span> <img class="linhabranca" width="3px" height="45px" src="linhabranca.png" /> <br/> 	<img src="linha2.png" width="35px" height="3px"/>  </h3>
-	<p> Browse our HTML5 responsive agency template below. Quisque lorem tortor fringilla sed,
-	vestibulum id, eleifend justo bibendum sapien massa ac turpis faucibus. </p>
-	<h4 class="join"> <b> Join for smart business!</b> </h4>
-	<p> Browse our HTML5 responsive agency template below. Quisque lorem tortor fringilla sed. </p>
-	<h5 class="hm"> <b> We are responsible </b> </h5>
-	<p class="hm"> Browse our HTML5 responsive agency template below. Quisque lorem tortor fringilla sed. </p>
-	<h5 class="hm"> <b> Very easy to customize </b> </h5>
-	<p class="hm"> Browse our HTML5 responsive agency template below. Quisque lorem tortor fringilla sed. </p>
+	<h3> Tudo sobre as qualidades do  <span class="marketing cookie"> <i> Invigar </i> </span> <img class="linhabranca" width="3px" height="45px" src="linhabranca.png" /> <br/> 	<img src="linha2.png" width="35px" height="3px"/>  </h3>
+	<p> Por mais que ele pareça estar sempre te julgando com um olhar de psicopata, Pedro possui algumas
+	qualificações que fazem o criador dessa página pirar por ele. </p>
+	<h4 class="join"> <b> Extremamente engraçado!</b> </h4>
+	<p> Por mais que tenha dificuldades de se soltar sóbrio, Pedro é uma pessoa incrivelmente engraçada. </p>
+	<h5 class="hm"> <b> Beleza de outro mundo </b> </h5>
+	<p class="hm"> Tudo nele consegue ser lindo e hipnotizante, como seu sorrisso, cabelo, olhos e corpo. </p>
+	<h5 class="hm"> <b> Os olhos mais vibrantes do mundo </b> </h5>
+	<p class="hm"> Ter olho claro é uma coisa, mas ter os olhos do Invigar é totalmente diferente. Sem dúvidas, uns dos olhos mais lindos que eu já vi pessoalmente </p>
 </div>
 </div>
 
@@ -251,11 +249,10 @@
 		<div class="features" >
 		<p class="Quality">  </p>
 		</div>
-		<h3> We design by maintaing <span class="UI cookie"> <i> UI/UX </i> </span> </h3>
+		<h3> De vez em quando, o Pedro gosta de me <span class="UI cookie"> <i> BEIJAR </i> </span> </h3>
 		<img src="linha2.png" width="35px" height="3px"/>
-		<p> Browse our HTML5 responsive agency template below. Quisque lorem tortor fringilla sed,
-		vestibulum id, eleifend justo bibendum sapien massa ac turpis faucibus. </p>
-		<p class="botao"> <a class="bordabotao2" href="https://www.tiktok.com/@invigar?" target="_blank"> HIRE US NOW </a> </p>
+		<p> Só de vez em quando o Invigar gosta de dar um beijinho :) eu fico extremamente boiola quando ele me beija. </p>
+		<p class="botao"> <a class="bordabotao2" href="https://www.tiktok.com/@invigar?" target="_blank"> TIKTOK </a> </p>
 	
 	</div>
 	</div>
@@ -267,11 +264,10 @@
 	<div class="col-sm-6 coluna">
 	<div class="UX">
 		<p class="features Quality2">  </p>
-		<h3> We <span class="Develop cookie"> <i> develop </i> </span> with no coding issues </h3>
+		<h3>Ele ama mais <span class="Develop cookie"> <i> Agalychnis callidryas </i> </span> do que passar tempo comigo </h3>
 		<img src="linha2.png" width="35px" height="3px"/>
-		<p> Browse our HTML5 responsive agency template below. Quisque lorem tortor fringilla sed,
-		vestibulum id, eleifend justo bibendum sapien massa ac turpis faucibus. </p>
-		<p class="botao"> <a class="bordabotao3" href="https://pt.wikipedia.org/wiki/Agalychnis_callidryas#:~:text=A%20r%C3%A3%20de%20olhos%20vermelhos,pr%C3%B3ximas%20a%20rios%20e%20lagos." target="_blank"> VIEW PORTIFOLIO </a> </p>
+		<p> Enquanto muitos possuem um amor normal por gatos e cachorros, Pedro tem um amor por rãs. Mas, isso que o torna mais especial e me faz ficar mais interessado nele. </p>
+		<p class="botao"> <a class="bordabotao3" href="https://pt.wikipedia.org/wiki/Agalychnis_callidryas#:~:text=A%20r%C3%A3%20de%20olhos%20vermelhos,pr%C3%B3ximas%20a%20rios%20e%20lagos." target="_blank"> Agalychnis callidryas </a> </p>
 	</div>
 	</div>
 		<div class="col-sm-6 coluna">
@@ -286,10 +282,10 @@
 
 <div class="div3">
 <div class="serv">
-<p class="best-services"> SERVICES </p>
-<h2> Out <span class="best-services cookie"> <i> best services </i> </span> to <br/> solve your problems </h2>
+<p class="best-services"> LOL </p>
+<h2> Viciado em <span class="best-services cookie"> <i> League of Legends </i> </span> :( <br/> </h2>
 <img src="linha2.png" width="35px" height="3px"/>
-<p> Browse our HTML5 responsive agency template below. Quisque <br/> lorem tortor fringilla sed, vestibulum id, eleifend justo.
+<p> Extremamente viciado em League of Legends. Não tinha como ser mais nard do que isso. Mas, <br/> devo admitir que eu acho isso extremamente fofo.
 </div>
 
 	<div class="container-fluid limitador espa">
@@ -297,29 +293,29 @@
 	<div class="col-sm-3 coluna">
 	<div class="fundo-coluna">
 		<img src="harry.png" width="50px" height="50px"/>
-		<h6> <b> Designing </b> </h6>
-		<p> Lorem ipsum dolor sit amet consectetur adipiscing elit </p>
+		<h6> <b> Main Lux </b> </h6>
+		<p> Tinha como ser mais gay do que isso? </p>
 	</div>
 	</div>
 	<div class="col-sm-3 coluna">
 	<div class="fundo-coluna">
 		<img src="reliquias.png" width="50px" height="50px"/>
-		<h6> <b> Developing </b> </h6>
-		<p> Lorem ipsum dolor sit amet consectetur adipiscing elit </p>
+		<h6> <b> Main Morgana </b> </h6>
+		<p> Tinha como ser mais gay do que isso?  </p>
 	</div>
 	</div>
 	<div class="col-sm-3 coluna">
 	<div class="fundo-coluna pad2">
 		<img src="coruja.png" width="50px" height="50px"/>
-		<h6> <b> SEO optimization </b> </h6>
-		<p> Lorem ipsum dolor sit amet consectetur adipiscing elit </p>
+		<h6> <b> Main Vex </b> </h6>
+		<p> Mal lançou a campeã e já se diz main. </p>
 	</div>
 	</div>
 	<div class="col-sm-3 coluna">
 	<div class="fundo-coluna">
 		<img src="cristal.png" width="50px" height="50px"/>
-		<h6> <b> Marketing </b> </h6>
-		<p> Lorem ipsum dolor sit amet consectetur adipiscing elit </p>
+		<h6> <b> Faz sup full AP </b> </h6>
+		<p> Pra que curar se ele pode matar os inimigos antes? </p>
 	</div>
 	</div>
 	</div>
@@ -337,7 +333,7 @@
 		<p class="lorem2"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.
 		<p class="lorem2"> <img src="phone.png" width="20px" height="20px" /> +123(4567)890 </p>
 		<p class="lorem2"> <img src="mail.png" width="20px" height="20px" /> info@invigar.com </p>
-		<p class="lorem2"> <img src="phone.png" width="20px" height="20px" /> 380 St Kilda Road, Melboume VIC 3004, New York </p>
+		<p class="lorem2"> <img src="house.png" width="20px" height="20px" /> 380 St Kilda Road, Melboume VIC 3004, New York </p>
 		</div>
 	</div>
 	</div>
