--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		}
 		
 		.sub1 {
-		font-size: 15px;
+		font-size: 18px;
 		padding: 10px 35px 10px 35px;
 		}
 		.botao {
@@ -207,7 +207,7 @@
 <body>
 <div class="div1 limitador">
 	<h1> Pedro de Sá Mantega <br/> é o <span class="cookie"> <i> Invigar </i> </span> do TikTok </h1>
-	<p class="sub1"> <b> Esse gato é ator, fascinado por répteis, sobretudo, pelas <i> Agalychnis callidryas </i>, joga League Of Legends e ama a cor verde. Eu dedico essa página a ele. </b> </p>
+	<p class="sub1"> Esse gato é ator, fascinado por répteis, sobretudo, pelas <i> Agalychnis callidryas </i>, joga League Of Legends e ama a cor verde. Eu dedico essa página a ele. </p>
 	<p class="botao"> <a class="bordabotao" href="https://www.instagram.com/invigar_/" target="_blank" > GO </a> </p>
 
 </div>
@@ -251,7 +251,7 @@
 		</div>
 		<h3> De vez em quando, o Pedro gosta de me <span class="UI cookie"> <i> BEIJAR </i> </span> </h3>
 		<img src="linha2.png" width="35px" height="3px"/>
-		<p> Só de vez em quando o Invigar gosta de dar um beijinho :) eu fico extremamente boiola quando ele me beija. </p>
+		<p> Só de vez em quando o Invigar gosta de me dar um beijinho :) eu fico extremamente boiola quando ele me beija. </p>
 		<p class="botao"> <a class="bordabotao2" href="https://www.tiktok.com/@invigar?" target="_blank"> TIKTOK </a> </p>
 	
 	</div>
@@ -315,7 +315,7 @@
 	<div class="fundo-coluna">
 		<img src="cristal.png" width="50px" height="50px"/>
 		<h6> <b> Faz sup full AP </b> </h6>
-		<p> Pra que curar se ele pode matar os inimigos antes? </p>
+		<p> Sem comentários. </p>
 	</div>
 	</div>
 	</div>
