--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 <body>
 <div class="div1 limitador">
 	<h1> Pedro de Sá Mantega <br/> é o <span class="cookie"> <i> Invigar </i> </span> do TikTok </h1>
-	<p class="sub1"> Esse gato é ator, fascinado por répteis, sobretudo, pelas <i> Agalychnis callidryas </i>, joga League Of Legends e ama a cor verde. Eu dedico essa página a ele. </p>
+	<p class="sub1"> Esse gato é ator, fascinado por répteis, sobretudo, pelas <i> Agalychnis callidryas </i>, joga League Of Legends e ama a cor verde. <br/> Eu dedico essa página a ele. </p>
 	<p class="botao"> <a class="bordabotao" href="https://www.instagram.com/invigar_/" target="_blank" > GO </a> </p>
 
 </div>
