--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 			padding: 30px 20px 30px 20px;
 		}
 		.div3 {
-			padding: 100px 0px 100px 0px;
+			padding: 20px 0px 100px 0px;
 		text-align: center;	
 		background-color: #4B4B4B;
 		}
@@ -170,6 +170,9 @@
 		}
 		.best-services {
 		color: #52B68C;	
+		}
+		.lol {
+		padding: 0px 0px 45px 0px;	
 		}
 		
 		.lorem2{
@@ -282,7 +285,7 @@
 
 <div class="div3">
 <div class="serv">
-<p class="best-services"> LOL </p>
+<p class="best-services lol"> LOL </p>
 <h2> Viciado em <span class="best-services cookie"> <i> League of Legends </i> </span> :( <br/> </h2>
 <img src="linha2.png" width="35px" height="3px"/>
 <p> Extremamente viciado em League of Legends. Não tinha como ser mais nard do que isso. Mas, <br/> devo admitir que eu acho isso extremamente fofo.
