--- a/index.html
+++ b/index.html
@@ -100,13 +100,11 @@
 			padding: 0px 0px 8px 0px;
 		}
 		.features {
+			height: 130px;
 			background-image: url(Features.png);
-			text-align: center;
-			margin: 0px 0px 0px 0px;
-			width: 180px;
-			height: 100px;
-			background-position: center center;
-			background-size: 200px;
+			background-repeat: no-repeat;
+			background-size: contain;
+			background-position: left left;
 		}
 		.alien {
 		padding: 15px 10px 20px 80px;	
@@ -133,8 +131,10 @@
 		border-color: #52B68C;
 		}
 		.Quality {
-		
-			color: #52B68C ;
+			padding: 83px 30px 0px 5px;
+			font-size: 14px;
+			color: white;
+			opacity: 100%;
 		}
 		.Quality2 {
 			color: #52B68C ;
@@ -250,7 +250,7 @@
 		<div class="col-sm-6 coluna">
 		<div class="UX">
 		<div class="features" >
-		<p class="Quality">  </p>
+		<p class="Quality"> QUALITY OF SERVICES </p>
 		</div>
 		<h3> De vez em quando, o Pedro gosta de me <span class="UI cookie"> <i> BEIJAR </i> </span> </h3>
 		<img src="linha2.png" width="35px" height="3px"/>
@@ -266,7 +266,10 @@
 	<div class="row">
 	<div class="col-sm-6 coluna">
 	<div class="UX">
-		<p class="features Quality2">  </p>
+		
+		<div class="features" >
+		<p class="Quality"> QUALITY OF SERVICES </p>
+		</div>
 		<h3>Ele ama mais <span class="Develop cookie"> <i> Agalychnis callidryas </i> </span> do que passar tempo comigo </h3>
 		<img src="linha2.png" width="35px" height="3px"/>
 		<p> Enquanto muitos possuem um amor normal por gatos e cachorros, Pedro tem um amor por rãs. Mas, isso que o torna mais especial e me faz ficar mais interessado nele. </p>
